Add Weka integration (requires docker-compose build)
Now we can use Weka's classes and methods.

The additional dokerfile/requirements include java, weka, and a few python dependencies.

The java version is an LTS one, but was pulled from the default debian package repo for a security vulnerability - the new lines ask for this version explicitly.

Soon: fixing the classifier input in the final cell (to fix the classifier output).

--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -2,6 +2,13 @@ FROM python:3.6
 
 WORKDIR /home/jupyterlab
 
+# The java version javabridge (> python-weka-wrapper3 > weka) needs (8) is removed
+# from the debian package repository. These lines tell apt to use the back door:
+RUN echo 'deb http://deb.debian.org/debian sid main' >> /etc/apt/sources.list
+
+RUN apt-get update
+RUN apt-get -y install openjdk-8-jdk
+
 COPY requirements.txt /home/jupyterlab
 
 RUN pip install --upgrade pip \
